# 2DAP_Project

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/game/: CMakeLists.txt  main.cpp
include/: ResourceManager.hpp  Shader.hpp  SpriteRenderer.hpp  Texture.hpp
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  Texture.cpp
